--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npm install"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1"
   }
 }
+
